--- a/total.html
+++ b/total.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>天猫前端布局</title>
+        <title>天猫页面模拟练习</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.1.0/css/bootstrap.min.css">
@@ -73,7 +73,7 @@
                     <span class="glyphicon glyphicon-home redColor"></span>
                     天猫首页
                 </a>
-                <span>喵，欢迎来到天猫</span>
+                <span>仅做练习和模拟，如有侵权，立即删除</span>
                 <a href="../登录界面/login.html">请登录</a>
                 <a href="../登录界面/register.html">免费注册</a>
                 <span class="pull-right">
@@ -118,10 +118,13 @@
                     <!-- 图片加上span方便后面猫耳朵效果 -->
         			<span><a href="#"><img src="chaoshi.png"></a></span>
 			        <span><a href="#"><img src="guoji.png"></a></span>
-	                <span><a href="#">平板电视</a></span>        
-	                <span><a href="#">马桶</a></span>        
-	                <span><a href="#">沙发</a></span>        
-	                <span><a href="#">电热水器</a></span> 
+	                <span><a href="#">天猫会员</a></span>        
+	                <span><a href="#">电器城</a></span>        
+	                <span><a href="#">喵鲜生</a></span>        
+	                <span><a href="#">医药馆</a></span> 
+				<span><a href="#">营业厅</a></span>  
+				<span><a href="#">魅力惠</a></span>  
+				<span><a href="#">飞猪旅行</a></span>  
         		</div>
         	</div>
             <!-- Indicators -->
@@ -159,59 +162,59 @@
             <div class="categoryMenu">
                 <div class="categoryMenu_list" cid = "90">
                     <span class="glyphicon glyphicon-link"></span>
-                    <a href="#">平板电视</a>
+                    <a href="#">女装/内衣</a>
                 </div>
                 <div class="categoryMenu_list" cid = "89">
                     <span class="glyphicon glyphicon-link"></span>
-                    <a href="#">马桶</a>
+                    <a href="#">男装/运动户外</a>
                 </div>
                 <div class="categoryMenu_list" cid = "88">
                     <span class="glyphicon glyphicon-link"></span>
-                    <a href="#">沙发</a>
+                    <a href="#">女鞋/男鞋/箱包</a>
                 </div>
                 <div class="categoryMenu_list" cid = "87">
                     <span class="glyphicon glyphicon-link"></span>
-                    <a href="#">电热水器</a>
+                    <a href="#">美妆/个人护理</a>
                 </div>
                 <div class="categoryMenu_list" cid = "86">
                     <span class="glyphicon glyphicon-link"></span>
-                    <a href="#">平衡车</a>
+                    <a href="#">腕表/眼镜/珠宝饰品</a>
                 </div>
                 <div class="categoryMenu_list" cid = "85">
                     <span class="glyphicon glyphicon-link"></span>
-                    <a href="#">扫地机器人</a>
+                    <a href="#">手机/数码/电脑办公</a>
                 </div>
                 <div class="categoryMenu_list" cid = "84">
                     <span class="glyphicon glyphicon-link"></span>
-                    <a href="#">果汁机</a>
+                    <a href="#">零食/茶酒/进口食品</a>
                 </div>
                 <div class="categoryMenu_list" cid = "83">
                     <span class="glyphicon glyphicon-link"></span>
-                    <a href="#">冰箱</a>
+                    <a href="#">生鲜水果</a>
                 </div>
                 <div class="categoryMenu_list" cid = "82">
                     <span class="glyphicon glyphicon-link"></span>
-                    <a href="#">空调</a>
+                    <a href="#">大家电/生活电器</a>
                 </div>
                 <div class="categoryMenu_list" cid = "81">
                     <span class="glyphicon glyphicon-link"></span>
-                    <a href="#">女表</a>
+                    <a href="#">汽车/配件/用品</a>
                 </div>
                 <div class="categoryMenu_list" cid = "80">
                     <span class="glyphicon glyphicon-link"></span>
-                    <a href="#">男表</a>
+                    <a href="#">家纺/家饰/鲜花</a>
                 </div>
                 <div class="categoryMenu_list" cid = "79">
                     <span class="glyphicon glyphicon-link"></span>
-                    <a href="#">男士手提包</a>
+                    <a href="#">医药保健</a>
                 </div>
                 <div class="categoryMenu_list" cid = "78">
                     <span class="glyphicon glyphicon-link"></span>
-                    <a href="#">男士西服</a>
+                    <a href="#">厨具/收纳/宠物</a>
                 </div>
                 <div class="categoryMenu_list" cid = "77">
                     <span class="glyphicon glyphicon-link"></span>
-                    <a href="#">太阳眼镜</a>
+                    <a href="#">图书音像</a>
                 </div>
             </div>
             <!-- 分类页内左边菜单 -->
@@ -728,7 +731,7 @@
                         <span>网络文化经营许可证：浙网文[2015]0295-065号</span>
                         <span>互联网医疗保健信息服务 审核同意书 浙卫网审【2014】6号 </span>
                         <span>互联网药品信息服务资质证书编号：浙-（经营性）-2012-0005</span>
-                        <div class="copyRightYear">© 2003-2016 TMALL.COM 版权所有</div>
+                        <div class="copyRightYear">© 2003-2020LL.COM 版权所有</div>
                         <div>
                             <img src="copyRight1.gif">
                             <img src="copyRight2.jpg">
